--- a/email/index.handlebars
+++ b/email/index.handlebars
@@ -120,7 +120,15 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <tr>
     <td style="padding-right: 0px;padding-left: 0px;" align="center">
       
-      <img align="center" border="0" src="images/image-1.png" alt="image" title="image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 96%;max-width: 576px;" width="576"/>
+      {{!-- <img align="center" border="0" src="./images/logo.png" alt="image" title="image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 96%;max-width: 576px;" width="576"/> --}}
+
+      <table width="100%" cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td bgcolor="#ecf0f1" style="padding-right: 0px;padding-left: 0px; height:100px; width:100%; font-size:24px;color:black; vertical-align: middle;" align="center">
+              Tasks:ToDo
+          </td>
+        </tr>
+      </table>
       
     </td>
   </tr>
@@ -137,7 +145,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:'Raleway',sans-serif;" align="left">
         
   <!--[if mso]><table width="100%"><tr><td><![endif]-->
-    <h1 class="v-font-size" style="margin: 0px; line-height: 110%; text-align: center; word-wrap: break-word; font-size: 22px; font-weight: 400;"><span><span><span><span><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><br />{{title}}<br /><br /></span></span></span></span></span></span></span></span></span></span></h1>
+    <h1 class="v-font-size" style="margin: 0px; line-height: 110%; text-align: center; word-wrap: break-word; font-size: 22px; font-weight: 400;"><span><span><span><span><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px;"><span style="line-height: 24.2px; font-size:16px; "><br />{{title}}<br /><br /></span></span></span></span></span></span></span></span></span></span></h1>
   <!--[if mso]></td></tr></table><![endif]-->
 
       </td>
